--- a/_site.yml
+++ b/_site.yml
@@ -14,14 +14,14 @@ output:
     self_contained: no
 # All fa icons were obtained from https://fontawesome.com/icons?d=gallery
 navbar:
-  title: "Final Project Title"
+  title: "Physical Metrics of Olympians"
   left:
     - text: "Blogpost"
       href: index.html
     - text: "More info"
       href: more_info.html
   right:
-    - icon: fa-github
+    - icon: fa-github fa-lg
       href: https://github.com/mvarnum/SDS192FinalProj
 #  right:
 #    - icon: fa-slack fa-lg
